--- a/Victories of Vakhtang.html
+++ b/Victories of Vakhtang.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Vicotires of Vakhtang</title>
+    <title>Vicotires</title>
   </head>
   <body>
     <h3>Victories<h3>
