--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <tr>
         <td><img src="https://www.enterprise.ge/uploads/2020/01/tbilisi-large.jpg" alt="old Tbilisi view"></td>
         <td><h1>Old Tbilisi</h1>
-        <p><em>The founder of Tbilisi <strong><a href="https://en.wikipedia.org/wiki/Vakhtang_I_of_Iberia">king vakhtang</a></strong></em></p>
+        <p><em>The founder of Tbilisi <strong><a href="https://en.wikipedia.org/wiki/Vakhtang_I_of_Iberia">king Vakhtang</a></strong></em></p>
         <p>One of the most succsasful king in Georgia history.</p></td>
       </tr>
     </table>
