--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </tr>
       </table>
       <hr size="2" noshade>
-      <a href="Victories_of_vakhtang.html">Victories</a>
+      <a href="Victories_of_Vakhtang.html">Victories</a>
       <a href="Family.html">Vakhtangs family</a>
       </body>
 </html>
