--- a/Family.html
+++ b/Family.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Vakhtang's family</title>
+    <title>Vakhtanovic family</title>
       </head>
   <body>
     <h1>Family line</h1>
